# klutch

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  404.html  Dockerfile  README.md  SCRATCHPAD.md  index.html  klutch.code-workspace  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/scripts/: set_version.sh
.github/workflows/: ci.yaml  cicd.yaml  docs.yaml  gh-pages.yaml  release.yaml
charts/klutch/: Chart.yaml  values.yaml
charts/klutch-example/: Chart.yaml  values.yaml
charts/klutch-example/templates/: _helpers.tpl  app-deployment.yaml  app-hpa.yaml  app-service.yaml  generator-deployment.yaml
charts/klutch/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  rbac.yaml  service.yaml  serviceaccount.yaml
charts/klutch/templates/tests/: test-connection.yaml
docs/: index.md  requirements.txt
examples/: cm-trigger-1.yaml  cm-trigger-2.yaml  cm-trigger.yaml  consumer-example.yaml  deployment.yaml  example.yaml  hpa.yaml  orphan.yaml  redeploy.sh  scaling-app-demo.yaml  trigger-1.yaml  trigger-2.yaml
klutch/: __init__.py  __main__.py  actions.py  client.py  config.py  exit_handler.py  kube_client.py  main.py  old_config.py  process.py  status.py  threaded.py  threads.py
klutch/threads/: trigger_configmap.py
search/: search_index.json
tests/: conftest.py  test_actions.py  test_client.py  test_config.py  test_exit_handler.py  test_old_config.py  test_threads.py
