[tool.poetry]
name = "klutch"
version = "0.1.0"
description = "Putting horizontal pod autoscalers into overdrive"
authors = ["Tibo Beijen <tibobeijen@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
pykube-ng = "~20.1.0"
jmespath = "~0.9.5"
kubernetes = "^11.0.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.2.0"
safety = "^1.8.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
