[tool.poetry]
name = "klutch"
version = "0.1.0"
description = "Putting horizontal pod autoscalers into overdrive"
authors = ["Tibo Beijen <tibobeijen@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "~3.9.0"
jmespath = "~0.9.5"
kubernetes = "^24.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.2.0"
safety = "^2.3.1"
pytest = "^5.4.1"
pyfakefs = "^4.0.2"
pytest-freezegun = "^0.4.2"
mypy = "^0.982"

[tool.black]
line-length = 118

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
